--- a/css/Roblox_studio.css
+++ b/css/Roblox_studio.css
@@ -307,51 +307,76 @@
   color: white;
 }
 
-/* extra's */
+  /* extra's */
 
-.accordion {
-    width: 750px;
-    margin: 0 auto;
-    overflow: hidden;
-    border-radius: 4px;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  @import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #E4E9F7;
+  }
+  h1 {
+    color: #11101d;
+    text-align: center;
+    margin: 2rem 0;
+    font-size: 2.5rem;
   }
   
-  .accordion-header {
+  .accordion {
+    width: 90%;
+    max-width: 1000px;
+    margin: 2rem auto;
+  }
+  .accordion-item {
+    background-color: #fff;
+    color: #111;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
+  }
+  .accordion-item-header {
+    padding: 0.5rem 3rem 0.5rem 1rem;
+    min-height: 3.5rem;
+    line-height: 1.25rem;
+    font-weight: bold;
     display: flex;
-    justify-content: space-between;
-    padding: 0.75rem 1rem;
-    width: 100%;
-    background: #11101D;
-    border: none;
-    outline: none;
-    border-bottom: 1px solid #11101d;
-    color: #f3f3f3;
+    align-items: center;
+    position: relative;
     cursor: pointer;
   }
-  
-  .accordion-header.active {
-    background-color: #2b2945;
+  .accordion-item-header::after {
+    content: "\002B";
+    font-size: 2rem;
+    position: absolute;
+    right: 1rem;
   }
-  .accordion-header.active i {
-    transform: rotate(180deg);
-    transition: all 0.3s ease-in-out;
+  .accordion-item-header.active::after {
+    content: "\2212";
   }
-  
-  .accordion-body {
-    padding: 0 1rem;
-    background-color: #f3f3f3;
+  .accordion-item-body {
     max-height: 0;
     overflow: hidden;
-    transition: all 0.3s ease-in-out;
+    transition: max-height 0.2s ease-out;
   }
-  
-  .accordion-body.active {
-    max-height: 10rem;
+  .accordion-item-body-content {
     padding: 1rem;
+    line-height: 1.5rem;
+    border-top: 1px solid;
+    border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
   }
 
-  .accordion a {
-    color: #6c69a4;
+  .accordion .accordion-item .accordion-item-body a {
     text-decoration: underline;
+    color: #5b93ca;
+  }
+  
+  @media(max-width:767px) {
+    html {
+      font-size: 14px;
+    }
   }
