--- a/css/style.css
+++ b/css/style.css
@@ -283,3 +283,5 @@
   text-align: center;
   margin-top: 20px;
 }
+
+/* <span style="background-color: darkturquoise; margin: -55px 0px 0px 383.5px;"><i class="fa-solid fa-clock fa-lg"></i> Coming Soon</span> */
